--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -16,7 +16,18 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736666.md#1" target="_blank">任世豪：岁末看反迫害前景</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736666.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/931fe311b37bc9ca2ac0a6b2511b0b60-150x120.jpg" align ="left"></a>时光飞逝，又值岁末。回顾即将过去的二零一九年，世事纷杂如棋。但只静心澄虑，便见脉络清晰。中共对法轮功的非法迫害，倏忽已经持续二十年。风雨如晦，法轮功学员依旧锲而不舍的讲清真相，继续引领着世人反迫害。鉴往知来，前景可期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 5:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736626.md#1" target="_blank">王友群：孟晚舟被抓一年 任正非明年更难过</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-v-2-150x120.jpg" align ="left"></a>2019年，中美关系在风雷激荡中度过。美国与中共华为公司的关系，成为美中关系的一个重要焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735857.md#1" target="_blank">海风：中共废港立澳成闹剧</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/20/n11735857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-16-600x400-2-150x120.jpg" align ="left"></a>香港持续半年多的反送运动，意味着中共“一国两制” 模式已彻底失败。这对中共执政者来说，无疑是一个沉重的打击。中共原本还希望借助“一国两制” 统一台湾，如今的“一国两制” 却变成了臭大街的政治垃圾。为重塑“一国两制” 的形象，中共希望借澳门回归20周年挽回败局。可事与愿违，这次不仅没有在国际上赢得喝彩，反而平添了闹剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:51 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/18/n11731126.md#1" target="_blank">【名家专栏】中共一胎化警示集体主义之邪恶</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/18/n11731126.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1312311127531528-150x120.jpg" align ="left"></a>今年，中共最骇人的“一胎化”公共政策已迈入40周年。幸运的是，《独生之国》这部新纪录片，揭开了这个残酷计划40年来的阴暗面纱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11739830.md#1" target="_blank">李春草：唐多令?红朝的“斗”与“拍”</a><br></h3>君演斗争秀
+嬖当吹鼓手
+一个个棍打辫揪
+白虎堂里陷英流
+右派斗
+资本愁......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:34 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11739724.md#1" target="_blank">陈达：“自干五”升级“牵妨母”</a><br></h3>老母养老金泡汤，惊呆急坏花千芳。
+慌慌张张发牢骚，经济糟糕未料想。
+尽管只是怨地方，有气也不敢冲党。
+怨言出自自干五，网络围观引一场。
+有笑被坑才知亏，有讽此事不该嚷。
+花千芳忙自删帖，改口结果尚不详。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11739547.md#1" target="_blank">理悟：悲哀自干五</a><br></h3>千古臭名扬，卖力挺共狼。
 为表心意铁，自己带干粮。
 亲娘被狼咬，你说多沮丧？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:50 AM			</td></tr>
@@ -48,6 +59,5 @@
 赵家公子眠花爽，党国权贵借酒狂
 宸阶留照魄久驻，两会怡神梦永享......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736882.md#1" target="_blank">?文武：川普成为全球反击中共的旗手</a><br></h3>自从川普当上美国总统以来，全球反击中共的形势就发生了巨大的变化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:48 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736531.md#1" target="_blank">袁斌：自打耳光 花千芳“爱国”情怀碎了一地</a><br></h3>早就走下坡路的著名五毛花千芳日前因为自曝母亲养老证被收缴一下又成了舆论热点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dueiwa2503/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
